force-app/main/default/objects/EducationReport__c/EducationReport__c.object-meta.xml
<CustomObject>
    <description>Bulletin ou compte-rendu scolaire d'un athlete.</description>
    <label>Education Report</label>
    <nameField>
        <label>Education Report Name</label>
        <type>AutoNumber</type>
        <displayFormat>ER-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Education Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>