force-app/main/default/objects/EducationReport__c/fields/AthleteEducation__c.field-meta.xml
<CustomField>
    <fullName>AthleteEducation__c</fullName>
    <label>Athlete Education</label>
    <referenceTo>AthleteEducation__c</referenceTo>
    <relationshipLabel>Education Reports</relationshipLabel>
    <relationshipName>EducationReports</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>