force-app/main/default/objects/EducationReport__c/fields/OverallGrade__c.field-meta.xml
<CustomField>
    <fullName>OverallGrade__c</fullName>
    <label>Overall Grade</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>