force-app/main/default/objects/EducationReport__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>