force-app/main/default/objects/EducationReport__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>